;;;; -*- coding: utf-8; fill-column: 78 -*-

changes in sbcl-1.3.2 relative to sbcl-1.3.1:
  * enhancement: {READ,WRITE}-SEQUENCE are much faster for some combinations
    of short sequences and stream types
  * enhancement: MAKE-LIST's result can be stack-allocated on x86-64
  * bug fix: WRITE-SEQUENCE no longer fails to write lists containing integers
    to bivalent streams
  * bug fix: LOGTEST (and hence ODDP) no longer conses when given fixnum
    arguments and small bit positions.  (lp#1277690)
  * bug fix: READ-FROM-STRING compiler-macro does not permute its arguments
  * bug fix: DEFUN of a function name that collides with a system-generated
    structure accessor does not confuse the runtime. (lp#540063)
  * bug fix: heap corruption from miscompiled RESTART-BIND. (lp#1530390)

changes in sbcl-1.3.1 relative to sbcl-1.3.0:
  * enhancement: SB-THREAD support for ARM64.
  * enhancement: compiling an out-of-line DEFSTRUCT constructor call
    will warn if a defaulted value is incompatible with its slot type.
  * enhancement: a local INLINE declaration on a structure constructor
    will work as intended, subject to any other factors that inhibit
    inlining, even if the DEFSTRUCT was not itself within a global
    INLINE proclamation for the named constructor
  * enhancement: SB-EXT:DYNAMIC-SPACE-SIZE is now defined for cheneygc.
  * enhancement: x86[-64] platforms support SB-EXT:CAS on structure slots
    of type SB-EXT:WORD
  * enhancement: the interleaved structure slot optimization from
    release 1.2.6 has been ported to 32-bit x86, Sparc, PowerPC, ARM64.
  * enhancement: SB-THREAD:JOIN-THREAD signals a proper error when an attempt
    is made to join the current thread
  * bug fix: NTH-VALUE does not cause stack overflow. (lp#1511419)
  * bug fix: structure constructor type checking is better. (lp#1508735)
  * bug fix: supplied-p variables for unused optional or keyword variables no