@@ -497,7 +497,6 @@
     (setq attributes (union '(call unwind) attributes)))
   (when (member 'flushable attributes)
     (pushnew 'unsafely-flushable attributes))
-
   `(%defknown ',(if (and (consp name)
                          (not (legal-fun-name-p name)))
                     name
@@ -505,6 +504,32 @@
               '(sfunction ,arg-types ,result-type)
               (ir1-attributes ,@attributes)
               (source-location)
+              :foldable-call-check
+              ,(and (member 'call attributes)
+                    (member 'foldable attributes)
+                    (let ((type (specifier-type `(sfunction ,arg-types)))
+                          (callable (specifier-type 'callable))
+                          (function (specifier-type 'function))
+                          (vars)
+                          (call-vars))
+                      (flet ((process-var (x &optional (name (gensym)))
+                               (if (or (type= x callable)
+                                       (type= x function))
+                                   (push name call-vars)
+                                   (push name vars))
+                               name))
+                        `(lambda (,@(mapcar #'process-var (fun-type-required type))
+                                  &optional ,@(mapcar #'process-var (fun-type-optional type))
+                                  ,@ (and (fun-type-keyp type)
+                                          `(&key
+                                              ,@(loop for key in (fun-type-keywords type)
+                                                      for var = (gensym)
+                                                      do (process-var (key-info-type key) var)
+                                                      collect `((,(key-info-name key) ,var))))))
+                           (declare (ignore ,@vars))
+                           ,@(assert call-vars)
+                           (and ,@(loop for x in call-vars
+                                        collect `(constant-fold-arg-p ,x)))))))
               ,@keys))
 
 ;;; Create a function which parses combination args according to WHAT
