@@ -1,5 +1,9 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-1.3.2:
+  * optimization: functions that call other functions (e.g. REDUCE, FIND) can
+    now be constant-folded if all function arguments are declared as foldable.
+
 changes in sbcl-1.3.2 relative to sbcl-1.3.1:
   * enhancement: {READ,WRITE}-SEQUENCE are much faster for some combinations
     of short sequences and stream types
